--- a/content/blogpost/post4.html
+++ b/content/blogpost/post4.html
@@ -53,4 +53,6 @@ Last bit, for which I am inordinately proud of, my EE215 final project. It looks
 <img src="content/blogimg/circuit.png" class="img-polaroid" style="width:450px; margin:25px;" />
 </p>
 
-<p><a href="?page=chat">leave a comment!</a></p>  
+<p><a href="?page=chat">leave a comment!</a></p>
+
+<p style="font-size:smaller;">Oh and one final thing. This site is now a completely github based deployment which you can view+clone <a href="https://github.com/spotco/spotcos.com-tmp">here</a>, if you'd ever want these shitty php scripts on your own machine.</p>
