--- a/content/blogpost/post5.html
+++ b/content/blogpost/post5.html
@@ -21,3 +21,7 @@ So the idea here was that all the popular games follow a certain ADJECTIVE NOUN 
 <p>
 A couple of other random fun things updated. I decided I wanted to write more, so I added a review section to the site. You can read my somewhat embarassing opinions on the latest vidya+anime I play/watch. In addition, also made <a href="https://github.com/spotco/GamePanel">GamePanel</a>, a simple game library based on marty's drawingpanel. I showed it to my section (along with a demo for a simple snake game), and I think they liked it. Easy enough to learn and make something in 1 hour. (I know I would have killed for this when I was learning programming :)). Finally, got a summer internship. GOING 2 SF BBBBBBBB~
 </p>
+<br/>
+<p>
+<i>Last bit, which I thought was funny. The site's been getting a lot of traffic, but not the good kind. Apparently all of the music I host has been scraped and is being linked to in all the mp3 search sites. Might need to do something about that...</i>
+</p>
