--- a/content/blogpost/post6.html
+++ b/content/blogpost/post6.html
@@ -27,11 +27,11 @@ A year later, and the game's almost done. Here's the newest demo video I sent to
 <iframe width="280" height="157" style="margin:20px" src="http://www.youtube.com/embed/SMFijfINWd8" frameborder="0" allowfullscreen></iframe><br/><br/>
 There's still a couple of things I need to get in before the first release, mainly relating to game-ification and non-directly game-mechanics related stuff. Basically, setting up a inventory and shop system to have stuff to buy with the ``coins'' collected and possible monetization (aka ``Unlock this feature for 4.99$!''). I made an actual todo list, but the gist of it is:
 <style>
-li {
+#todolist > li {
 	margin-bottom:10px;
 }
 </style>
-<ul style="list-style-type:disc;">
+<ul style="list-style-type:disc;" id="todolist">
 	<li>Inventory and shop system where you can buy one-time use powerups to help you ingame (at the time of writing I have this <a href="https://www.youtube.com/watch?v=-F-vC6Ps3-s">somewhat implemented</a>). I'd like to have at least 4 different powerups (magnet, rocket, heart and shield), all upgradeable to last longer/more effective/etc. I hope this could be one of the main money dumps in the game.</li>
 	<li>Challenge level system. A series (target amount here is about 16-24) of challenges where you'll be given a goal (ex. collect at least 28/30 total coins, beat in 30 seconds or less, etc) to complete. The real genius of this will be that I will hopefully be able to reuse the same levels I use in the infinite mode (now called ``Free Running Mode''), meaning less work overall. I intend for these to be from somewhat challenging to perfection-demandingly hard, but it looks like items will make them easier than intended. Well, gotta casualize somehow. Now if only I could monetize that...</li>
 	<li>Make a shit load more levels (about 20-25 more). This is probably the most challenging (if not definitely most draining) part of game development - making the actual content itself. The whole past year's been spent perfecting the code and game engine, but the whole point of that is to have fun levels for the player to actually play. I've had this <a href="gogodoggy/editor.html">internal-tools-quality web app</a> to make levels, but it's still pretty tiresome to make them. It's usually about 1 hour or so to make a ~60 second level section, so you can imagine the math there. In the <b>very</b> distant future, I'd like to have an in-game level editor. I don't know how I'll ever transform <a href="gogodoggy/editor.html">this modal mess</a> into an intuitive touch-app for the cellphone screen, but that's a problem for a very distant me.</li>
