--- a/content/blogpost/post6.html
+++ b/content/blogpost/post6.html
@@ -1,6 +1,14 @@
+<h1>Shoot2kill</h1>
+<p><i>Updated by spotco on April 22nd, 2013</i></p>
+<hr/>
+<b>Won a hackathon and all I got was this this blue box</b>
+<a href="content/blogimg/bluebox.png"><img src="content/blogimg/bluebox.png" class="img-polaroid" style="width:200px;margin:20px;"/></a><br/>
+On the upside, did finally get to make the online 3d FPS I always wanted to make. Presenting...<b><a href="http://54.245.123.189/shoot2kill/client/3dclient.html">SHOOT2KILL</a></b><br/> (don't know how long I'll keep this server up, living off ec2 free tier for now)<br/>
+<a href="http://54.245.123.189/shoot2kill/client/3dclient.html"><img src="content/blogimg/shoot2kill.png" class="img-polaroid" style="width:400px;margin:10px;" /></a>
+<br/>It can handle about 4-5 people before shitting itself.
+<hr/>
 <h1>A year of SpeedyPups</h1>
 <p><i>Posted by spotco on April 1st, 2013</i></p>
-<hr/>
 <p>
 Got a pretty good amount of work done on the iOS game over break. Mainly animation, menu and more level making. It's got a new <b>animated</b> logo (fancy). As you can tell, it's really Sonic-inspired.<br/>
 <img src="content/blogimg/speedylogo.gif" style="margin:20px;" /><br/>
