--- a/content/blogpost/post9.html
+++ b/content/blogpost/post9.html
@@ -1,8 +1,8 @@
 <h1>MoeMoeRush</h1>
-<p><i>Posted by SPOTCO on Jan 2014</i></p>
+<p><i>Posted by SPOTCO on Jan 2014</i> <img src="content/blogimg/moemoerush.gif" style="float:right;height:150px;"/></p>
 <hr>
 <p>
-Still making games and living the dream, though school and other things have been taking waaay too much time. Recently started up <a href="http://students.washington.edu/gamedevc">UW GameDev club</a>, and that's been a good excuse to do TA-ish public speaking again. In addition, most likely going back to Zynga this summer, with a possibility of something at Google in the fall (hoping for the best, did the interview a week ago)
+Still making games and living the dream, though school and other things have been taking waaay too much time. Recently started up <a href="http://students.washington.edu/gamedevc">UW GameDev club</a>, and that's been a good excuse to do TA-ish public speaking again. In addition, most likely going back to Zynga this summer.
 </p>
 <p>
 Some fun times since I last wrote, got BTFO-ed at the last two hackathons I went to. First was the Facebook global finals back November 2013. Since we were in the south bay area, tracked down Marty Stepp's class and sat in it.<br/>
