cyberpunk game jam blogpost done

--- a/content/blogpost/post10.html
+++ b/content/blogpost/post10.html
@@ -2,10 +2,141 @@
 <p>Posted by SPOTCO on Mar 2014</p>
 <hr/>
 <p>
-	Entered the <a href="http://itch.io/jam/cyberpunk-jam">Cyberpunk Game Jam</a> with our game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">WINDOW CLEANER - The love story</a>.<br/><br/> Really satisfied with how the game turned out (managed to put in everything we wanted). It was a reach stretch though (the weekend before the deadline, we were at about 20% programming done and 5% of the art). Shoutouts to Ciera, Yasu, Donovan and Joshua for their work.<br/><br/>
-	I'm planning to play just about every working entry to the jam, and post some of my favorites here. Stay tuned!
+	Entered the <a href="http://itch.io/jam/cyberpunk-jam">Cyberpunk Game Jam</a> with our game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Window Cleaner - A Tale of Two Gangs</a>.<br/><br/> Really satisfied with how the game turned out (managed to put in everything we wanted). It was a reach stretch though (the weekend before the deadline, we were at about 20% programming done and 5% of the art). Shoutouts to Ciera, Yasu, Donovan and Joshua for their work.<br/><br/>
+	I'm planning to play just about every working entry to the jam, and post some of my favorites here (Work in progress).
 </p>
 <hr/>
 <p>
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/the-tallest-building.png"><img src="content/blogimg/gamejam/the-tallest-building.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://qwerty.itch.io/the-tallest-building">The Tallest Building</a></h2>
+			<p>
+	<b>Liked:</b> Probably my favorite that I've played so far. Starts up deceptively simple, and quickly becomes frustratingly (but addictively) difficult. For me, it was one of those "let me give it one more try", somehow get to the next checkpoint and play for another 30 minutes kind of games.<br/>
+	<b>Disliked:</b> My only two gripes were that it was sometimes hard to tell where your character and mouse were in bullet-heavy situations, and that switching weapons should have been keyboard-binded (I don't trust my scroll wheel). I WOULD complain about the difficulty and the distance between checkpoints...but that's part of what made it so fun. Oh and hated falling off the tower, though I guess that is an integral part of gameplay as well.
+			</p>
+		</div>
+	</div><hr/>
 
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/currently-running-processes.png"><img src="content/blogimg/gamejam/currently-running-processes.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://cutgarnetgames.itch.io/currently-running-processes">Currently Running Processes</a></h2>
+			<p>
+	<b>Liked:</b> This game took everything I found fun from Gunpoint (which I bought on Steam as an impulse buy) and mixed it with a genre I normally don't like (typing) and made it work. Just imagine this: jumping through a window in full bullet-time, and in order to live you need to quickly type this word to disable the guard that just spotted you. Yeah, that does sound awfully like QTE's. But, these are all completely unscripted gameplay situations (Gunpoint was fun for much the same reason).<br/>
+<b>Wanted:</b> Wish there was more of it! I could imagine this being a full on sandbox game (like Gunpoint), or more linear and story-based (with all the appropriate set pieces). Also, it brought all of the insta-death from Gunpoint as well (which does get frustrating when they shoot you from out of the screen).
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/hunter.png"><img src="content/blogimg/gamejam/hunter.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://siactro.itch.io/hunter">Hunter</a></h2>
+			<p>
+<b>Liked:</b> I feel that this game, more than any other, really got the "cyberpunk" feel down. It's the random chinese-lettering on the signs, the music, and the large masses of people that you really feel like you're moving through (it's part of the game mechanics!). For having the minimalistic minecraft-style models and art, I think it conveys a whole lot (and is the perfect style to do for contests like these). Had a whole lot of trouble finding the target until I read that he would be running around (as opposed to blended in with the people). Oops!			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/va-11-hall-a.png"><img src="content/blogimg/gamejam/va-11-hall-a.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://kiririn51.itch.io/valhalla-bar">Valhalla Bar</a></h2>
+			<p>
+<b>Liked:</b> Really immersive storytelling that paints a world much bigger than the game itself (a shame, I could easily imagine this as a full VN). Actually, just make that loli-bot the main character and you've got VN-gold.
+<br/><b>Disliked:</b> The drink mixing mechanic, for if you screwed up you would have to replay the whole (admittedly short) game to try again and see the text you missed. No idea what's possibly in renpy, but I do know I would be using save states for this.		
+</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/protocol.png"><img src="content/blogimg/gamejam/protocol.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://nik.itch.io/protocol">Protocol</a></h2>
+			<p>
+<b>Liked:</b> Impressive graphics (dem shader effects), with surprisingly smart AI. I found the enemies circling around me, waiting for when I was re-positioning, and just generally being interesting.
+<br/><b>Disliked:</b> Kinda repetitive stages.		
+</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/hck_2_0_0.png"><img src="content/blogimg/gamejam/hck_2_0_0.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://dir3kt.itch.io/hck_2_0_0">hck_2_0_0</a></h2>
+			<p>
+<b>Liked:</b> Pretty fun pseudo-puzzle game with really excellent aesthetics. Everything about the graphics "just fit" together.
+<br/><b>Disliked:</b> Hated that when you "died", you had to start over from the beginning (or did I not get far enough for a checkpoint?).	
+</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/mech-stroller.png"><img src="content/blogimg/gamejam/mech-stroller.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://carelesslabs.itch.io/mech-stroller">mech-stroller</a></h2>
+			<p>
+<b>Liked:</b> A couple of nice "WOW" moments, such as when the helicopter (dropping the Mr.T's) flies in, animation looks pretty good.
+<br/><b>Wanted:</b> Graphics are lacking in random places (default java ui font, no explosion when dying, etc). No music either (I imagine a nice chiptune would do this game wonders). No story or anything, so no real motivation to keep going.
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/skater-punch.png"><img src="content/blogimg/gamejam/skater-punch.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://dimmak111.itch.io/skater-punch">skater punch</a></h2>
+			<p>
+<b>Liked:</b> This game had some real style, loved the tv-screened effect. Very fitting atmosphere overall, combined with some great chiptunes.
+<br/><b>Wanted:</b> Can't move midair, even though some level-patterns seemed to suggest you could. Would have been fun to have to chain together pipe-grinds like in Tony Hawk or something as the game got harder.
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/victim.png"><img src="content/blogimg/gamejam/victim.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://jackasquires.itch.io/victim">Victim</a></h2>
+			<p>
+<b>Liked:</b> Cute "dystopian" atmosphere (dig those chinese-character signs, every game needs more of those). Really great "drop" moment (you'll know it when you play it, but it's when the music starts).
+<br/><b>Wanted:</b> Short and not really any gameplay, was that your father that you just killed?.
+			</p>
+		</div>
+	</div><hr/>
+
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="content/blogimg/gamejam/dayglow-empire.png"><img src="content/blogimg/gamejam/dayglow-empire.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://lux_pp.itch.io/dayglow-empire">Dayglow Empire</a></h2>
+			<p>
+<b>Liked:</b> Nice graphics and music (though I liked the "cyberpunk city" background more than the "clouds" one). Spent enough time with it that I felt compelled to beat it. Dat ending.<br/>
+<b>Disliked:</b> Somewhat frustrating controls that take some getting used to (which you will be by the end of playing this), could have used some more mechanics. Kinda wish they'd introduce some new mechanics as the levels progress (some of which you can already see ingame, like the police car shooting bullets).
+			</p>
+		</div>
+	</div><hr/>
+</p>
+
+<p>
+	Posting more soon! (Any good ones I missed? <a href="?page=chat"> Post them in the chat!</a>)
 </p>
