cyberpunk game jam blogpost done

--- a/content/blogpost/post10.html
+++ b/content/blogpost/post10.html
@@ -2,7 +2,13 @@
 <p>Posted by SPOTCO on Mar 2014</p>
 <hr/>
 <p>
-	Entered the <a href="http://itch.io/jam/cyberpunk-jam">Cyberpunk Game Jam</a> with our game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Window Cleaner - A Tale of Two Gangs</a>.<br/><br/> Really satisfied with how the game turned out (managed to put in everything we wanted). It was a reach stretch though (the weekend before the deadline, we were at about 20% programming done and 5% of the art). Shoutouts to Ciera, Yasu, Donovan and Joshua for their work.<br/><br/>
+	Entered the <a href="http://itch.io/jam/cyberpunk-jam">Cyberpunk Game Jam</a> with our game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Window Cleaner - A Tale of Two Gangs</a>.
+
+	<a href="http://spotco.itch.io/window-cleaner---the-love-story">
+		<img src="content/blogimg/windowcleaner_banner.png" style="margin:15px;" class="img-polaroid" />
+	</a>
+	<br/>
+	Really satisfied with how the game turned out (managed to put in everything we wanted). It was a reach stretch though (the weekend before the deadline, we were at about 20% programming done and 5% of the art). Shoutouts to Ciera, Yasu, Donovan and Joshua for their work.<br/><br/>
 	I'm planning to play just about every working entry to the jam, and post some of my favorites here (Work in progress).
 </p>
 <hr/>
