--- a/content/blogpost/post11.html
+++ b/content/blogpost/post11.html
@@ -17,7 +17,7 @@
 <p>
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="content/blogimg/hanoka.png"><img src="content/blogimg/hanoka.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://www.newgrounds.com/portal/view/638425"><img src="content/blogimg/hanoka.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
 			<h2><a href="http://www.newgrounds.com/portal/view/638425">Hanoka</a></h2>
@@ -30,7 +30,7 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="content/blogimg/we_grow.png"><img src="content/blogimg/we_grow.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://monoplexgames.com/ld29"><img src="content/blogimg/we_grow.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
 			<h2><a href="http://monoplexgames.com/ld29">We Grow</a></h2>
@@ -43,7 +43,7 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="content/blogimg/digable_planet.png"><img src="content/blogimg/digable_planet.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://oddly-shaped-pixels.itch.io/digable-planet-post-compo"><img src="content/blogimg/digable_planet.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
 			<h2><a href="http://oddly-shaped-pixels.itch.io/digable-planet-post-compo">Digable Planet</a></h2>
@@ -56,7 +56,7 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="content/blogimg/damn_scouts.png"><img src="content/blogimg/damn_scouts.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://jonochrome.itch.io/scary-ugly-face"><img src="content/blogimg/damn_scouts.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
 			<h2><a href="http://jonochrome.itch.io/scary-ugly-face">Damn Scouts</a></h2>
