ld28 post update

--- a/content/blogpost/post11.html
+++ b/content/blogpost/post11.html
@@ -17,10 +17,10 @@
 <p>
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="http://www.newgrounds.com/portal/view/638425"><img src="content/blogimg/hanoka.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=25252"><img src="content/blogimg/hanoka.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
-			<h2><a href="http://www.newgrounds.com/portal/view/638425">Hanoka</a></h2>
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=25252">Hanoka</a></h2>
 			<p>
 	<b>Liked:</b> By far and away my favorite out of all that I played. So much ambition (and polish) for a 48 hour game, and executed super well. Highlights are the RPG-esque upgrade system (that keep you interested for the whole game), and really amazing graphics &amp; animations. Also the voice acting is super cute, I gotta get more of that in my games :)<br/>
 	<b>Disliked:</b> Starts off (before you have all your upgrades) pretty slow and a little frustrating. You'll need to grind a bit before taking on the first boss, then your powerlevel snowballs from there. My first run took around 30-40mins (which is huge for a gamejam game), but really wish there was more of it!
@@ -30,10 +30,10 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="http://monoplexgames.com/ld29"><img src="content/blogimg/we_grow.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=35873"><img src="content/blogimg/we_grow.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
-			<h2><a href="http://monoplexgames.com/ld29">We Grow</a></h2>
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=35873">We Grow</a></h2>
 			<p>
 	<b>Liked:</b> Like Pikmin, but super simplified (with blocky canvas.drawrect graphics). Super creative idea, and pretty fun to play. Ending also makes me cry errytime.<br/>
 <b>Disliked:</b> Not too challenging (your pikmins never stop spawning) and pretty short. But, it WAS a gamejam game so that last bit can be forgiven.
@@ -43,10 +43,10 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="http://oddly-shaped-pixels.itch.io/digable-planet-post-compo"><img src="content/blogimg/digable_planet.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=33840"><img src="content/blogimg/digable_planet.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
-			<h2><a href="http://oddly-shaped-pixels.itch.io/digable-planet-post-compo">Digable Planet</a></h2>
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=33840">Digable Planet</a></h2>
 			<p>
 <b>Liked:</b> Played a couple of RTS-like games, and this one was my favorite. Decently challenging (had to restart a few times before I had a good setup going), and really great art and sound. Will take a bit of micro to beat, though once you know what you're doing the the game will end pretty quickly. Also a really creative idea, with complex mechanics that are well explained.<br/>
 <b>Disliked:</b> Too short (no fault here), and the win-condition is really luck based (either your radars find the artifacts or they don't). 
@@ -56,16 +56,89 @@
 
 	<div class="row">
 		<div class="span2" style="margin-top:35px;">
-			<a href="http://jonochrome.itch.io/scary-ugly-face"><img src="content/blogimg/damn_scouts.png" style="width:150px;" class="img-polaroid"/></a>
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=37338"><img src="content/blogimg/damn_scouts.png" style="width:150px;" class="img-polaroid"/></a>
 		</div>
 		<div class="span6">
-			<h2><a href="http://jonochrome.itch.io/scary-ugly-face">Damn Scouts</a></h2>
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=37338">Damn Scouts</a></h2>
 			<p>
-<b>Liked:</b> Really really cute art and setting. Funny too, since you need to find various ways to kill the scouts (and they always have a super cute  death animation). 
-<br/><b>Disliked:</b> One of those indie platformer/puzzle games without much gameplay (this one's more on the puzzle side). Had some trouble (leading to frustration) figuring out how to kill the last scout, ended up solving it by running around pressing the "use" button on the whole map. 
-</p>
+			<b>Liked:</b> Really really cute art and setting. Funny too, since you need to find various ways to kill the scouts (and they always have a super cute  death animation). 
+			<br/><b>Disliked:</b> One of those indie platformer/puzzle games without much gameplay (this one's more on the puzzle side). Had some trouble (leading to frustration) figuring out how to kill the last scout, ended up solving it by running around pressing the "use" button on the whole map. 
+			</p>
 		</div>
 	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=4232"><img src="content/blogimg/kinetectonic.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=4232">Kinetectonic</a></h2>
+			<p>
+			<b>Liked:</b> Completely original puzzle game idea (I've never seen anything like this), and very fun+addicting. Plays a little bit like a match-3 game, but that's like saying Yoshi's Cookie is similar to Bejeweled. This one, more than any other, would make for a great expanded mobile version. Had some RPG-ish elements too that furthered the addiction.
+			<br/><b>Disliked:</b> It'll take a few deaths to figure out what's going on (there are three different enemy types: cats, mushrooms and slimes and you have no idea what they are at first) and no tutorial. Once you understand everything and really get into it, it ends.
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=35553"><img src="content/blogimg/hot_diggity.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=35553">Hot Diggity</a></h2>
+			<p>
+			<b>Liked:</b> Really fun fast-paced Terraria/Minecraft infinite digger with slight RPG-progression mechanics (collect minerals to upgrade your machine to dig faster!). Challenging too, I never got past around the 250 meter mark (usually triggered one to many exploding blocks). This one was really great in the ``Game Feel'' department, drilling and shooting lasers felt really ``right''.
+			<br/><b>Disliked:</b> The tank-style controls always felt a little difficult (even with a couple of engine upgrades), and would have liked to have seen more mechanics the deeper you went.
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=2982"><img src="content/blogimg/beneath_the_city.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=2982">Beneath the City</a></h2>
+			<p>
+			<b>Liked:</b> I really loved the turn-based stealth mechanics in this one. It was a bit like one of the first games I made, <a href="/SaveThePrincess/SaveThePrincess.zip">Save the Princess</a>, with a much more refined mechanics. It has multiple ways to beat each level, as well as limited-use items to spice up the gameplay. Would also love to see this one expanded, maybe with some rpg-elements and a full story. This one really inspired me too, if I was to ever work on another 2d stealth game, I'd borrow some mechanics from this.
+			<br/><b>Disliked:</b> Ending was (self-admittedly) a little dissapointing. Items were fun, but not particularily well integrated into the rest of the game (you only started with a certain amount every level, and there weren't any more to pick up). Finally, would have also liked a little bit of non-required combat (sneak up behind the guard, Metal Gear style?). 
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=4433"><img src="content/blogimg/dig_hard.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=4433">Dig Hard</a></h2>
+			<p>
+			<b>Liked:</b> Another Terraria/Minecraft digger, though not infinite! You find weapons underground to speed up your digging (Lasers, Rocket Launchers, etc), and have to avoid various obstacles such as landmines and exploding blocks.  
+			<br/><b>Disliked:</b> Really fun and addicting, though probably the most frustrating out of the bunch! You die really quickly (one hit), and often don't have time to react to what's gonna kill you. You'll have to make leaps of faith, and more often than not they'll lead to a pit of fatal land mines or a random raptor that'll jump on your head. It's fairly short too, a full (perfect) run will take less than a minute to beat.
+			</p>
+		</div>
+	</div><hr/>
+
+	<div class="row">
+		<div class="span2" style="margin-top:35px;">
+			<a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=33058"><img src="content/blogimg/planet_corp.png" style="width:150px;" class="img-polaroid"/></a>
+		</div>
+		<div class="span6">
+			<h2><a href="http://www.ludumdare.com/compo/ludum-dare-29/?action=preview&uid=33058">Planet Corp</a></h2>
+			<p>
+			<b>Liked:</b> Starts out easy enough, a precision timing/aim game where you fire a limited number of missiles to try and hit targets. But then, around level 3, it gets ridiculously hard (see the picture). That specific level requires you to make about 10 perfect shots in a row on a very small target, on a strict time limit too. Took me about an hour total to beat it, but did it sure feel great afterwards. 
+			<br/><b>Disliked:</b> The sudden spike in challenge may be offputting to some (and man did it sure require perfection). 
+			</p>
+		</div>
+	</div>
+
+<hr/>
 <p>
-	I'm trying to reach the top 20 in games rated, so I'll play more and post them if one really catches my imagination. LD has been lots of fun, totally gonna do it again (hopefully with an artist though :))
+	Rated about 170 games (if you count at least 5 minutes per game, that's a WHOLE LOT of indie gaming!) over the course of a week. Was a little slow, so the highest (in ``coolness'') that I ever reached was #35.
+	<br/>
+	<a href="content/blogimg/itchio_topcool.png">
+		<img src="content/blogimg/itchio_topcool.png" style="margin:15px;" class="img-polaroid" />
+	</a>
+	<br/>
+	Really enjoyed the Ludum Dare experience, and would love to do it again (hopefully with an artist next time though! :))
 </p>
