--- a/content/blogpost/post11.html
+++ b/content/blogpost/post11.html
@@ -2,7 +2,7 @@
 <p>Posted by SPOTCO on May 2014</p>
 <hr/>
 <p>
-	Entered the <a href="http://www.ludumdare.com/compo/">Ludum Dare 29</a> (theme: Beneath the Surface) with my game, <a href="http://spotco.itch.io/window-cleaner---the-love-story">Maniac Pengmaku!</a>.
+	Entered the <a href="http://www.ludumdare.com/compo/">Ludum Dare 29</a> (theme: Beneath the Surface) with my game, <a href="http://www.spotcos.com/penguin">Maniac Pengmaku!</a>.
 	<br/>
 	<a href="http://spotcos.com/penguin">
 		<img src="content/projectsimg/banner/pengmaku_banner.png" style="margin:15px;" class="img-polaroid" />
